# beer-examples

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/: utils.h
launch/: load_gazebo_world.launch
models/: beer.sdf  wooden_box.sdf
resource/: grasps.yaml
scripts/: drink_beer_py
src/beer_examples/: utils.py
src/cpp/: drink_beer.cpp  utils.cpp
