<?xml version="1.0"?>
<package>
  <name>beer_examples</name>
  <version>0.1.0</version>
  <description>The beer_examples package</description>

  <maintainer email="andriy@no-spam-email.com">Andriy</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sr_robot_msgs</build_depend>
  <build_depend>sr_hand</build_depend>
  <build_depend>sr_grasp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>sr_robot_msgs</run_depend>
  <run_depend>sr_hand</run_depend>
  <run_depend>sr_grasp</run_depend>
</package>
